# ErnOSAgent

./: .env.example  .gitignore  Cargo.toml  README.md  ern-os.toml
.github/workflows/: android.yml  ci.yml
agents/: rust_code_governance.md
android/: build-apk.sh  build.gradle.kts  llama-build.sh  settings.gradle.kts
android/.cargo/: config.toml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/ernos/app/: ComputeMode.kt  EngineService.kt  (+3 more)
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
docs/: README.md  architecture.md  configuration.md  inference.md  learning.md  manual_verification.md  providers.md  testing.md  tools.md
extensions/ernos-chat/: extension.js  package.json
prompts/: core.md  identity.md  observer.md
scripts/: flux_server.py
src/: android_bridge.rs  lib.rs  main.rs  services.rs
src/checkpoint/: restore.rs
src/config/: mod.rs
src/inference/: fast_reply.rs  mod.rs  react_loop.rs  router.rs  stream_consumer.rs  sub_agent.rs
src/interpretability/: corpus.rs  sae.rs  train_runner.rs  trainer.rs
src/learning/: curriculum.rs  curriculum_tests.rs  graduation.rs  graduation_tests.rs  mlx_bridge.rs  mlx_bridge_tests.rs  mod.rs  research.rs  research_tests.rs  review.rs  review_tests.rs  student.rs  student_tests.rs  verification.rs  verification_tests.rs
src/memory/: procedures.rs
src/memory/synaptic/: mod.rs
src/observer/: mod.rs  parser.rs  rules.rs
src/planning/: executor.rs  planner.rs
src/platform/: adapter.rs  discord.rs  discord_cmd_handlers.rs  discord_commands.rs  discord_handler.rs  discord_interaction.rs  mod.rs  registry.rs  router.rs  router_interactions.rs  router_stream.rs  router_thread.rs  telegram.rs
src/prompt/: conversation_stack.rs  hud.rs  mod.rs  tools.rs
src/provider/: llamacpp.rs  mod.rs  ollama.rs  openai_compat.rs  spiral_detector.rs  stream_parser.rs
src/scheduler/: job.rs  learning_tasks.rs  mod.rs  store.rs
src/tools/: browser_tool.rs  compiler.rs  executor.rs  file_extractor.rs  file_read.rs  image_gen_tool.rs  interpretability_tool.rs  introspect_tool.rs  mod.rs  schema.rs  schema_definitions.rs  schema_definitions_ext.rs  self_skills_tool.rs  session_recall_tool.rs  shell.rs  synaptic_tool.rs  system_logs.rs
src/tools/file_extractor/: archives.rs  communication.rs  data.rs  documents.rs  media.rs  mod.rs  text.rs
src/verification/: mod.rs  pipeline.rs
src/web/: attachment_ingest.rs  dispatch_memory.rs  hud_data.rs  mod.rs  output_sanitizer.rs  server.rs  state.rs  tool_dispatch.rs  training_capture.rs  ws.rs  ws_context.rs  ws_l1.rs  ws_react.rs  ws_react_helpers.rs  ws_stream.rs
src/web/handlers/: agents.rs  content.rs  mod.rs  models_hub.rs  planning.rs  platform_context.rs  platform_exec.rs  platform_ingest.rs  platform_reinfer.rs  platform_stream.rs  platforms.rs  sae_capture.rs  scheduler.rs  system.rs  tts.rs  upload.rs  version.rs  video.rs  voice.rs
src/web/static/: app.css  app.js  index.html
tests/: e2e_tests.rs  test_structure.json
