[package]
name = "ern-os"
version = "0.1.0"
edition = "2021"
description = "High-performance, model-neutral Rust AI agent engine with dual-layer inference"
license = "MIT"
default-run = "ern-os"

[features]
default = ["file-extract", "desktop"]
# GPU acceleration for Candle ML operations — opt-in per hardware:
#   cargo build --release --features metal    (macOS — Apple Silicon)
#   cargo build --release --features cuda     (Linux/Windows — NVIDIA)
#   cargo build --release                     (any platform — CPU)
metal = ["candle-core/metal"]
cuda = ["candle-core/cuda"]
# Desktop build — native file system tools, verification pipeline, Tauri integration
desktop = []
# Android build — reduced tool surface, mobile-optimized paths
android = []
# Universal file ingestion — PDF, Office, spreadsheets, archives, databases
file-extract = ["dep:lopdf", "dep:calamine", "dep:csv", "dep:zip", "dep:rusqlite", "dep:quick-xml"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# HTTP + streaming
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# IDs + time
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Search
regex = "1"
cron = "0.15"

# Media encoding
base64 = "0.22"

# Web server + WebSocket
axum = { version = "0.8", features = ["ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Utilities
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# Storage
dirs = "6"
sysinfo = "0.32"

# ML — Candle (GPU features opt-in: --features metal OR --features cuda)
candle-core = { version = "0.8" }
candle-nn = { version = "0.8" }
candle-transformers = { version = "0.8" }
safetensors = { version = "0.4" }
memmap2 = { version = "0.9" }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
slug = "0.1.6"
urlencoding = "2"

# File extraction (optional, on by default)
lopdf = { version = "0.34", optional = true }
calamine = { version = "0.26", optional = true }
csv = { version = "1.3", optional = true }
zip = { version = "2.2", optional = true }
rusqlite = { version = "0.32", optional = true, features = ["bundled"] }
quick-xml = { version = "0.37", optional = true }

# Headless browser
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }

# Platform adapters
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "http", "rustls_backend"] }
teloxide = { version = "0.13", features = ["macros"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

[profile.release]
opt-level = 3
lto = "thin"
